# WutBot-Discord-Bot

./: README.md
wutbot/wutbot/: main.py  pyproject.toml
