[tool.poetry]
name = "repl_python3_wutbot"
version = "0.1.0"
description = ""
authors = ["Jeffrey Lu jtlu3@illinois.edu"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^1.0.1"
keepalive = "^0.5"
flask = "^2.0.1"
youtube-dl = "^2021.5.16"
replit = "^3.2.4"
bs4 = "^0.0.1"
jaro-winkler = "^2.0.3"
requests = "^2.28.1"
jsonpickle = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
